fix clipping in password div

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,6 +22,7 @@ body {
   background-color: #fff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  overflow-wrap: break-word;
 }
 
 button {
